Got losses and guessesLeft counts to update in HTML.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Wins: <span id="wins"></span></p>
         <p>Losses: <span id="losses"></span></p>
         <p>Guesses left: <span id="guessesLeft"></span></p>
-        <p>Guesses so far: <span id="userguesses"></span></p>
+        <p>Guesses so far: <span id="guessedLetters"></span></p>
 
     </div>
 
